Tidus Opus 29 multi attacks, Leo/Graham cast restrictions